--- a/src/app/dashboards/dashboard-emp/dashboard-emp.component.html
+++ b/src/app/dashboards/dashboard-emp/dashboard-emp.component.html
@@ -378,7 +378,7 @@
 
                               <!-- Your Training -->
                        
-                              <div class="col-md-6">
+                              <!-- <div class="col-md-6">
                                 <div class="card card-animate r-10 shadow-lg">
                                     <div class="card-body pa-0 pb-0">
                                         <h4 class="card-title mb-2 font-type fw-semibold">Training Hours</h4>
@@ -407,6 +407,27 @@
                                                 <p class="font-type fs-12 margin-up-5">Pending</p>                        
                                             </div> 
                                         </div>
+                                        </div>
+                                </div>
+                            </div> -->
+                            <div class="col-md-6" [ngClass]="{'disabled': isDisabled}">
+                                <div class="card card-animate r-10 shadow-lg">
+                                    <div class="card-body pa-0">
+                                        <h4 class="card-title mb-2 font-type fw-semibold">Training Hours</h4>
+                                        <div class="text-center margin-up-15">
+                                            <div>
+                                               <div class="apex-charts" id="radial-chart" style="min-height: 66px;"><div id="apexchartszis7lnkb" class="apexcharts-canvas apexchartszis7lnkb apexcharts-theme-light font-type" style="width: 190px; height: 66px;"><svg id="SvgjsSvg1133" width="190" height="66" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" class="apexcharts-svg" xmlns:data="ApexChartsNS" transform="translate(0, 0)" style="background: transparent;"><g id="SvgjsG1135" class="apexcharts-inner apexcharts-graphical" transform="translate(20, -10)"><defs id="SvgjsDefs1134"><clipPath id="gridRectMaskzis7lnkb"><rect id="SvgjsRect1137" width="156" height="162" x="-3" y="-1" rx="0" ry="0" opacity="1" stroke-width="0" stroke="none" stroke-dasharray="0" fill="#fff"></rect></clipPath><clipPath id="gridRectMarkerMaskzis7lnkb"><rect id="SvgjsRect1138" width="154" height="164" x="-2" y="-2" rx="0" ry="0" opacity="1" stroke-width="0" stroke="none" stroke-dasharray="0" fill="#fff"></rect></clipPath></defs><g id="SvgjsG1139" class="apexcharts-radialbar"><g id="SvgjsG1140"><g id="SvgjsG1141" class="apexcharts-tracks"><g id="SvgjsG1142" class="apexcharts-radialbar-track apexcharts-track" rel="1"><path id="apexcharts-radialbarTrack-0" d="M 21.280487804878042 75 A 53.71951219512196 53.71951219512196 0 0 1 128.71951219512195 75" fill="none" fill-opacity="1" stroke="rgba(231,231,231,0.85)" stroke-opacity="1" stroke-linecap="butt" stroke-width="9.345121951219513" stroke-dasharray="0" class="apexcharts-radialbar-area" data:pathOrig="M 21.280487804878042 75 A 53.71951219512196 53.71951219512196 0 0 1 128.71951219512195 75"></path></g></g><g id="SvgjsG1144"><g id="SvgjsG1148" class="apexcharts-series apexcharts-radial-series" seriesName="Storage" rel="1" data:realIndex="0"><path id="SvgjsPath1149" d="M 21.280487804878042 75 A 53.71951219512196 53.71951219512196 0 0 1 114.28796409307861 38.36338077956944" fill="none" fill-opacity="0.85" stroke="#3399cc" stroke-opacity="1" stroke-linecap="butt" stroke-width="9.634146341463415" stroke-dasharray="3" class="apexcharts-radialbar-area apexcharts-radialbar-slice-0" data:angle="137" data:value="76" index="0" j="0" data:pathOrig="M 21.280487804878042 75 A 53.71951219512196 53.71951219512196 0 0 1 114.28796409307861 38.36338077956944"></path></g><circle id="SvgjsCircle1145" r="44.0469512195122" cx="75" cy="75" class="apexcharts-radialbar-hollow" fill="transparent"></circle><g id="SvgjsG1146" class="apexcharts-datalabels-group" transform="translate(0, 0) scale(1)" style="opacity: 1;"><text id="SvgjsText1147" font-family=" hkgrotesk,sans-serif;" x="75" y="73" text-anchor="middle" dominant-baseline="auto" font-size="16px" font-weight="400" stroke="#3399cc" class="apexcharts-text apexcharts-datalabel-value" style="font-family:hkgrotesk,sans-serif;">32 Hrs</text></g></g></g></g><line id="SvgjsLine1150" x1="0" y1="0" x2="150" y2="0" stroke="#b6b6b6" stroke-dasharray="0" stroke-width="1" class="apexcharts-ycrosshairs"></line><line id="SvgjsLine1151" x1="0" y1="0" x2="150" y2="0" stroke-dasharray="0" stroke-width="0" class="apexcharts-ycrosshairs-hidden"></line></g><g id="SvgjsG1136" class="apexcharts-annotations"></g></svg><div class="apexcharts-legend"></div></div></div>
+                                            </div>
+                                        </div>
+                                        <div class="row mt-1 text-center pa-0">                    
+                                            <div class="col-lg-6 ">                        
+                                                <h6 class="font-type ma-5"><span class="badge fs-12 bg-light-orange text-orange"><span class="font-type fs-14 fw-semibold text-orange">40</span> hrs</span></h6>                        
+                                                <p class="font-type fs-12 margin-up-5">Assigned</p>                    
+                                            </div>                    
+                                            <div class="col-lg-6">                        
+                                                <h6 class="font-type ma-5"><span class="badge bg-info-subtle text-blue fs-12"><span class="font-type fs-14 fw-semibold text-blue" >8</span> hrs</span></h6>                                             
+                                                <p class="font-type fs-12 margin-up-5">Pending</p>                        
+                                            </div> </div>
                                         </div>
                                 </div>
                             </div>
